Refactor: Unify the macOS and Linux launcher scripts